# cca-f-roadmap

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
_shared/: client.py
domain-1-agentic/: README.md
domain-1-agentic/examples/: 01-agentic-loop.py  02-programmatic-prerequisites.py  03-multi-agent-handoff.py  04-tool-error-handling.py
domain-2-tools-mcp/: README.md
domain-2-tools-mcp/examples/: 01-tool-description-quality.py  02-tool-budget.py  03-mcp-server-stdio.py
domain-3-claude-code/: README.md
domain-3-claude-code/examples/: CLAUDE.md.example  cf-orchestrate-convert.md  ci-pipeline.sh  hook-format-on-edit.json
domain-3-claude-code/examples/skill-example/: SKILL.md
domain-4-prompting/: README.md
domain-4-prompting/examples/: 01-structured-output.py  02-prompt-chaining.py  03-escalation-routing.py
domain-5-context/: README.md
domain-5-context/examples/: 01-lost-in-the-middle.py  02-trim-tool-outputs.py  03-batch-vs-realtime.py
scenarios/: README.md
